# Repo

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  test.py
cpp_gateway/: CMakeLists.txt  CMakePresets.json  config.json
cpp_gateway/scripts/: start_gateway.sh
cpp_gateway/src/: ChatService.cc  ChatService.h  DocumentService.cc  DocumentService.h  HealthService.cc  HealthService.h  PythonApiClient.cc  PythonApiClient.h  SessionService.cc  SessionService.h  StreamChatService.cc  main.cc
cpp_gateway/src/clients/: PythonApiClient.cc  PythonApiClient.h  PythonSSEClient.cc  PythonSSEClient.h
cpp_gateway/src/common/: GatewaySecurity.cc  GatewaySecurity.h
cpp_gateway/src/handlers/: ChatHandler.cc  ChatHandler.h  DocumentHandler.cc  DocumentHandler.h  HealthHandler.cc  HealthHandler.h  SessionHandler.cc  SessionHandler.h  StreamChatHandler.cc  StreamChatHandler.h
cpp_gateway/uploads/: 1774750217261658_test.md
data/indexes/: doc_11.faiss  doc_11_mapping.json  doc_12.faiss  doc_12_mapping.json
data/uploads/: 9e58f33dfcf64dd491ac49233b50b51f_day7_demo.md  c1ac3099399047b98b495591acdc5639_day7_demo.md
db/: 001_schema_upgrade.sql  002_schema_upgrade.sql  003_schema_upgrade.sql  init.sql
docs/: embedding_finetune.md  gateway_auth_rate_limit.md  monitoring_metrics.md  performance_test_guide.md  rag_ingest_retrieval_capacity.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
python_rag/: cache.py  config.py  constants.py  db.py  exceptions.py  init_app.py  logger.py  main.py  models.py  requirements.txt  schemas.py  test_mysql.py  test_redis.py
python_rag/app/: main.py
python_rag/constants/: redis_keys.py  task_state.py
python_rag/core/: error_codes.py  errors.py  exception_handlers.py  logger.py
python_rag/domain/: exceptions.py
python_rag/infra/: mysql.py  redis_client.py  schema_support.py  storage.py
python_rag/repos/: chunk_repo.py  (+7 more)
scripts/: e2e_all.sh  e2e_chat.sh  e2e_ingest.sh  init_db.sh  metrics_benchmark.py  start_all.sh  start_api.sh  start_vllm.sh  start_worker.sh  test_doc_search.py
(+143 files in other folders)
